--- a/frontend/google-books-api-app/src/App.css
+++ b/frontend/google-books-api-app/src/App.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 #search-button {
-  margin-top: 10px;
+  margin: 10px 0 10px 0;
   width: 400px;
   font-size: 25px;
   padding: 0px;
@@ -32,6 +32,16 @@ h1 {
 
 .search-container {
   text-align: center;
+}
+
+#dropdown-container {
+  margin: auto;
+  width: 400px;
+}
+
+#results-per-page-dropdown {
+  color: white;
+  font-size: 25px;
 }
 
 .card-container {
