--- a/frontend/google-books-api-app/src/App.css
+++ b/frontend/google-books-api-app/src/App.css
@@ -107,6 +107,12 @@ h1 {
   padding: 0px;
 }
 
+#current-page-display {
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+}
+
 footer {
   text-align: center;
   margin-bottom: 20px;
