--- a/frontend/google-books-api-app/src/App.css
+++ b/frontend/google-books-api-app/src/App.css
@@ -74,6 +74,11 @@ h1 {
   font-size: 15px;
 }
 
+#book-image {
+  height: 200px;
+  width: 140px;
+}
+
 #book-title {
   margin-top: 10px;
   max-height: 60px;
@@ -97,7 +102,6 @@ h1 {
 
 #page-buttons {
   text-align: center;
-  margin-bottom: 10px;
 }
 
 #previous-page, #next-page {
@@ -111,6 +115,18 @@ h1 {
   text-align: center;
   font-size: 25px;
   font-weight: bold;
+}
+
+#first-last-page {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#first-page, #last-page {
+  width: 190px;
+  margin: 10px;
+  font-size: 25px;
+  padding: 0px;
 }
 
 footer {
